fix: image and header styles on small screens

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -25,6 +25,7 @@
 
 .columns > div > .columns-img-col img {
   display: block;
+  margin: 20px auto;
 }
 
 @media (min-width: 900px) {
