--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,10 +14,6 @@ header .nav-wrapper {
   padding: 25px 0 23px;
 }
 
-@media (min-width: 600px) {
-
-}
-
 @media (min-width: 900px) {
 
 }
